--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-datepicker": "^4.23.0",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-scripts": "5.0.1",
@@ -44,6 +45,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/react-datepicker": "^4.19.3",
+    "@types/react-modal": "^3.16.3",
     "@types/react-table": "^7.7.18",
     "msw": "^2.0.9"
   },
